create, join & show your rooms completed

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 }
 
 body {
+  position: relative;
+}
+
+/* body {
   background-color: #282c34;
 }
 
@@ -90,7 +94,7 @@ input {
 }
 
 button {
-  background-color: #282c34; /* Green */
+  background-color: #282c34; 
   border: none;
   color: white;
   padding: 15px 32px;
@@ -173,4 +177,4 @@ img {
   height: 40px;
   border-radius: 50%;
   margin: 2px 5px;
-}
+} */
